<resources>
    <!-- App Name -->
    <string name="app_name">School Events</string>

    <!-- Page Names -->
    <string name="page_event_detail">Event Detail</string>
    <string name="page_home">Home</string>

    <!-- Content Descriptions -->
    <string name="back_icon">Back Icon</string>
    <string name="event_big_photo">Event Big Photo</string>
    <string name="event_detail_photo">Event Detail Photo</string>
    <string name="event_detail_calendar_icon">Event Detail Calendar Icon</string>
    <string name="event_list_item_photo">Event List Item Photo</string>
    <string name="event_list_item_photo_top_gradient">Event List Item Photo Top Gradient</string>
    <string name="event_list_item_photo_bottom_gradient">Event List Item Photo Bottom Gradient</string>
    <string name="school_list_item_profile_photo">School List Item Profile Photo</string>
    <string name="school_list_item_action_icon">School List Item Action Icon</string>

    <!-- Component Strings -->
    <string name="add_to_my_calendar">Add To My Calendar</string>

    <!-- Arrays -->
    <string-array name="event_types">
        <item>Seminer</item>
        <item>Workshop</item>
    </string-array>

    <!-- Navigation Drawer -->
    <string name="close_drawer">Kapat</string>
    <string name="open_drawer">Aç</string>
</resources>
