<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.EventDetailActivity">
    <include
        android:id="@+id/event_detail_toolbar"
        layout="@layout/toolbar" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_detail_toolbar">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">
            <android.support.constraint.ConstraintLayout
                android:id="@+id/brand_info_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:id="@+id/info_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Afişin üstüne tıklayarak tam halini görebilirsiniz."
                    android:textColor="@color/colorAccent"
                    android:ellipsize="end"
                    android:maxLines="1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/info_close_button"/>
                <ImageView
                    android:id="@+id/info_close_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_close_white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </android.support.constraint.ConstraintLayout>
            <ImageView
                android:id="@+id/event_detail_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/event_detail_photo"
                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintTop_toBottomOf="@id/brand_info_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <LinearLayout
                android:id="@+id/event_detail_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/event_detail_rectangle_shape"
                android:padding="10dp"
                android:elevation="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@id/event_detail_image"
                app:layout_constraintBottom_toBottomOf="@id/event_detail_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <TextView
                    android:id="@+id/event_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:layout_marginTop="30dp" />
                <TextView
                    android:id="@+id/event_detail_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimaryDark"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Eğitmen:"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginTop="10dp" />
                <TextView
                    android:id="@+id/event_instructor_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:id="@+id/requirement_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:text="Gereksinimler:"/>
                <TextView
                    android:id="@+id/requirement_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:maxLines="5"
                    android:ellipsize="end"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="Etkinlik Tipi:"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:id="@+id/event_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Yer / Mekan: "
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>
                <TextView
                    android:id="@+id/event_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark" />
                <LinearLayout
                    android:id="@+id/event_detail_date_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:id="@+id/event_detail_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/event_detail_date_drawable"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/event_detail_date_border_color"/>
                    <TextView
                        android:id="@+id/event_detail_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/event_detail_hour_drawable"
                        android:textColor="@color/event_detail_hour_border_color"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_marginTop="10dp"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:layout_marginStart="10dp"/>
                </LinearLayout>
            </LinearLayout>
            <ImageView
                android:id="@+id/event_detail_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calendar"
                android:background="@drawable/event_detail_calendar_background"
                android:padding="10dp"
                android:elevation="11dp"
                android:contentDescription="@string/event_detail_calendar_icon"
                app:layout_constraintTop_toTopOf="@id/event_detail_container"
                app:layout_constraintBottom_toTopOf="@id/event_detail_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <Button
                android:id="@+id/event_detail_calendar_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/event_detail_button_drawable"
                android:layout_margin="20dp"
                android:text="@string/add_to_my_calendar"
                android:textColor="@color/white"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/event_detail_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/event_detail_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/colorPrimary"
        android:layout_centerInParent="true"/>
</RelativeLayout>